vista de administrador creada

--- a/Examen2_ds411/Examen2_ds411.csproj
+++ b/Examen2_ds411/Examen2_ds411.csproj
@@ -215,7 +215,7 @@
       <DependentUpon>ModelBanca.edmx</DependentUpon>
     </Content>
     <Content Include="connectionStrings.config.example" />
-    <Content Include="connectionStrings.config" />
+    <None Include="connectionStrings.config" />
     <None Include="Dockerfile" />
     <None Include=".dockerignore">
       <DependentUpon>Dockerfile</DependentUpon>
